# fairq-api

./: .bumpversion.cfg  .env_TEMPLATE  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  setup.cfg  update-cache.py
fairqapi/: __init__.py  main.py
fairqapi/cache/: cache.py  cache_updater.py
fairqapi/db/: __init__.py  db_connect.py
fairqapi/internal/: data_utils.py  json_utils.py  stopwatch.py
fairqapi/internal/tests/: test_data_utils.py  test_json_utils.py
fairqapi/routers/: __init__.py  grid.py  health_check.py  lor.py  simulation.py  stations.py  streets.py
fairqapi/schemas/: grid_response.py  lor_response.py  request.py  simulation_response.py  stations_response.py  streets_response.py
fairqapi/tests/: test_integration_performance.py  test_integration_response.py
